prodmind/packages/parser/src/__tests__/fixtures/architectures/invalid-boundary-system/infra/database.ts
export class DatabaseConnection {
  query(sql: string, params: unknown[]): void {
    console.log(`Executing: ${sql}`, params);
  }
}
